# -course_project_5

./: README.md  main.py  pyproject.toml
src/: DBManager.py  utils.py
